--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "driver.js": "^1.3.1"
     }
 }
